# bookstack-editor

./: .gitignore  .style.yapf  LICENSE  README.md  bookstack-editor.el  flake.nix  justfile  pyproject.toml  ruff.toml
bookstack_editor/: __main__.py  api.py
